--- a/carousel.html
+++ b/carousel.html
@@ -22,11 +22,6 @@
   <li>3</li>
   <li>4</li>
   <li>5</li>
-  <li>6</li>
-  <li>7</li>
-  <li>8</li>
-  <li>9</li>
-  <li>10</li>
 </ul>
 
 <script type="text/javascript" src="jquery-1.7.1.min.js"></script>
@@ -35,10 +30,7 @@
   $(".carousel").carousel({
     prevID: "prev",    
     nextID: "next",
-    pageID: "page",
-    loop: 1,
-    speed: 200,
-    currentClass: "current"
+    pageID: "page"
 	});  		 	
 </script>
 
