--- a/carousel.html
+++ b/carousel.html
@@ -1,8 +1,9 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE>
 <html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-  <link rel="stylesheet" href="_carousel.css">
+	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">  
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/_carousel.css">
 	<title>carousel</title>
 </head>
 <body>
@@ -17,15 +18,15 @@
 </div>
 
 <ul class="clearfix carousel">
-  <li>1</li>
-  <li>2</li>
-  <li>3</li>
-  <li>4</li>
-  <li>5</li>
+  <li><img src="img/1.jpg" draggable="false"/></li>
+  <li><img src="img/2.jpg" draggable="false"/></li>
+  <li><img src="img/3.jpg" draggable="false"/></li>
+  <li><img src="img/4.jpg" draggable="false"/></li>
 </ul>
 
-<script type="text/javascript" src="jquery-1.7.1.min.js"></script>
-<script type="text/javascript" src="_jquery.carousel.js"></script>
+<!-- <script type="text/javascript" src="../zepto.js"></script> -->
+<script type="text/javascript" src="scripts/jquery-1.7.1.min.js"></script>
+<script type="text/javascript" src="scripts/_jquery.carousel.js"></script>
 <script type="text/javascript">
   $(".carousel").carousel({
     prevID: "prev",    
