--- a/carousel_touch.html
+++ b/carousel_touch.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">  
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/_carousel.css">
 	<title>carousel</title>
@@ -17,7 +18,7 @@
   <a href="javascript:void(0);" id="next" class="next"></a>
 </div>
 
-<ul class="clearfix carousel">
+<ul class="clearfix carousel" draggable="false">
   <li><img src="img/1.jpg" draggable="false"/></li>
   <li><img src="img/2.jpg" draggable="false"/></li>
   <li><img src="img/3.jpg" draggable="false"/></li>
