--- a/carousel_touch.html
+++ b/carousel_touch.html
@@ -18,16 +18,16 @@
   <a href="javascript:void(0);" id="next" class="next"></a>
 </div>
 
-<ul class="clearfix carousel" draggable="false">
-  <li><img src="img/1.jpg" draggable="false"/></li>
-  <li><img src="img/2.jpg" draggable="false"/></li>
-  <li><img src="img/3.jpg" draggable="false"/></li>
-  <li><img src="img/4.jpg" draggable="false"/></li>
+<ul class="clearfix carousel">
+  <li><img src="img/1.jpg"/></li>
+  <li><img src="img/2.jpg"/></li>
+  <li><img src="img/3.jpg"/></li>
+  <li><img src="img/4.jpg"/></li>
 </ul>
 
 <!-- <script type="text/javascript" src="../zepto.js"></script> -->
 <script type="text/javascript" src="scripts/jquery-1.7.1.min.js"></script>
-<script type="text/javascript" src="scripts/_jquery.carousel.touch.js"></script>
+<script type="text/javascript" src="scripts/_jquery.carousel.js"></script>
 <script type="text/javascript">
   $(".carousel").carousel({
     prevID: "prev",    
