--- a/carousel.html
+++ b/carousel.html
@@ -1,10 +1,11 @@
 <!DOCTYPE>
 <html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">  
+  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">  
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/_carousel.css">
-	<title>carousel</title>
+  <title>carousel</title>
 </head>
 <body>
 <div class="bar">
@@ -18,21 +19,21 @@
 </div>
 
 <ul class="clearfix carousel">
-  <li><img src="img/1.jpg" draggable="false"/></li>
-  <li><img src="img/2.jpg" draggable="false"/></li>
-  <li><img src="img/3.jpg" draggable="false"/></li>
-  <li><img src="img/4.jpg" draggable="false"/></li>
+  <li><img src="img/1.jpg"/></li>
+  <li><img src="img/2.jpg"/></li>
+  <li><img src="img/3.jpg"/></li>
+  <li><img src="img/4.jpg"/></li>
 </ul>
 
-<!-- <script type="text/javascript" src="../zepto.js"></script> -->
 <script type="text/javascript" src="scripts/jquery-1.7.1.min.js"></script>
 <script type="text/javascript" src="scripts/_jquery.carousel.js"></script>
 <script type="text/javascript">
   $(".carousel").carousel({
     prevID: "prev",    
     nextID: "next",
-    pageID: "page"
-	});  		 	
+    pageID: "page",
+    loop: 0
+  });       
 </script>
 
 </body>
